--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 TELEGRAM_API_ID=26503614
 TELEGRAM_API_HASH=25add0c0b21fec5f7d3e1828bd4d1bdc
 TELEGRAM_SESSION_STRING=1BJWap1sBu1pzPVIA-mPZRefU7Wgly1OvxMJJXUberNl0SAlAgUFthL4fiKymgx-2QH2kVvyaym3VfeyCo8dRkdfZkDii60M8ksgLKa1WHmnzNpVCzV3n-M_EiWbp3HBNGuPxgQ2Kevr8_4TNMW6S4vA6zkypY_IKPpgKEs_DmCN--oEo5d7vJ4Moc-qjKRAG-Bw4qnviyHJy4p2XRvcIxYkCmO-9V2iShVb_yKFaCIEEep7IizRInP6NEyHquEex2ntWfQB9nFMpMvDhYqsjt63vVjJy-CZ10dKHx2aTFZDLRsm_VNAUu6R8Mdrk8BBDNkxDuHW5rtbDo8QE1_qKy5quTx_yXMQ=
-TELEGRAM_CHANNEL_ID=traderinsightschannel
+TELEGRAM_CHANNEL_ID=@traderinsightschannel
 RSS_FEED_URL=https://rss.app/feeds/GlIhLfO4znFdKbiW.xml
